move compile method to TestUtils